--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0-alpha1",
     "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
